--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             color: white;
             background-color: black;
             line-height: 1.6;
+            align-items: center;
+            height: 100vh;
+            display: flex;
         }
 
         /* Видео на весь фон */
